--- a/src/main/resources/templates/begin.html
+++ b/src/main/resources/templates/begin.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:insert="blocks/head :: head">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
 
+<div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
