--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Login</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<head th:insert="blocks/head :: head">
 </head>
 <body>
-<p th:text="'Hello, ' + ${name} + '!'" />
+<header th:insert="blocks/header :: header"></header>
+
+<div th:insert="blocks/footer :: footer"></div>
 </body>
 </html>
