--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,5 +1,5 @@
 <div th:fragment="footer" xmlns:th="http://www.w3.org/1999/xhtml">
-    <footer class="blog-footer container">
+    <footer class="blog-footer container mt-5">
         <p>
             <a href="#">Back to top</a>
         </p>
