--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,18 +1,34 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
     <div th:fragment="header">
-        <div class="container">
+        <div class="container mb-5">
             <header class="blog-header py-3">
                 <div class="row flex-nowrap justify-content-between align-items-center">
-                    <div class="col-4 pt-1">
-                        <a class="text-muted" href="/about">Subscribe</a>
+                    <div class="col-1 pt-1">
+                        <a class="text-muted" href="/about">О нас</a>
+                    </div>
+                    <div class="col-2 pt-1">
+                        <a class="text-muted" href="/main">Расписание</a>
+                    </div>
+                    <div class="col-1 pt-1" sec:authorize="hasAuthority('ADMIN')">
+                        <a class="text-muted" href="/user">Пользователи</a>
                     </div>
                     <div class="col-4 text-center">
-                        <a class="blog-header-logo text-dark" href="/">Large</a>
+                        <a class="blog-header-logo text-dark" href="/">Кубанский государственный университет</a>
                     </div>
                     <div class="col-4 d-flex justify-content-end align-items-center">
                         <a class="text-muted" href="/blog" aria-label="Search">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
                         </a>
+                        <div sec:authorize="!isAuthenticated()">
+                            <a class="btn btn-sm btn-outline-secondary" href="/login">Войти</a>
+                        </div>
+                        <div sec:authorize="isAuthenticated()">
+                            <strong sec:authentication="name" class="mr-2"></strong>
+                            <a class="btn btn-sm btn-outline-secondary" href="/user/profile">Профиль</a>
+                        </div>
+                    </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <div th:insert="blocks/login :: logout"></div>
                     </div>
                 </div>
             </header>
