--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,15 +1,26 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:insert="blocks/head :: head">
 </head>
 <body>
     <header th:insert="blocks/header :: header"></header>
+        <div class="container">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <form method="get" th:action="@{/main}" class="form-inline">
+                        <input class="form-control" type="text" th:value="${team}" name="team" placeholder="Группа">
+                        <input class="form-control" type="text" th:value="${subgroup}" name="subgroup" placeholder="Подгруппа">
+                        <button type="submit" class="btn btn-dark">Поиск</button>
+                    </form>
+                </div>
+            </div>
+        </div>
         <div class="container" th:each="el : ${page}">
             <table class="table table-sm table-hover col-lg-10 col-md-10 col-sm-12">
                 <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col"><i th:text="${el.day_of_week}"/></th>
+                    <th scope="col"><i th:text="${el.dayOfWeek}"/></th>
                     <th scope="col"> <i th:text="${el.team}"/>/<i th:text="${el.subgroup}"/> </th>
                 </tr>
                 </thead>
@@ -53,6 +64,22 @@
                     <th scope="row">#</th>
                     <td><b>Какая неделя?</b></td>
                     <td><b th:text="${el.parity}"/></td>
+                </tr>
+                <tr>
+                    <th scope="row">#</th>
+                    <td><b>Автор расписания</b></td>
+                    <td><b th:text="${el.author.username}"/></td>
+                </tr>
+                <tr sec:authorize="hasAuthority('ADMIN')">>
+                    <th scope="row">#</th>
+                    <td>
+                        <a th:href="'/main/'+${el.id}+'/edit'" class="btn btn-warning">Редактировать</a>
+                    </td>
+                    <td>
+                        <form th:action="'/main/'+ ${el.id} + '/remove'" method="post">
+                            <button class="btn btn-warning">Удалить</button>
+                        </form>
+                    </td>
                 </tr>
                 </tbody>
             </table>
