--- a/src/main/resources/templates/begin.html
+++ b/src/main/resources/templates/begin.html
@@ -5,18 +5,18 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
-    <p>Приветствую тебя пользователь в веб-приложении,
+    <p class="font_size_2">Приветствую тебя пользователь в веб-приложении,
         созданным студентом Кубанского государственного
         университета. Здесь ты можешь найти расписание
         своей группы и подгруппы(если она есть).
         Однако, чтобы использовать сервис для начало
         зарегистрируйся или авторизируйся в системе.</p>
     <div class="row flex-nowrap justify-content-between align-items-center">
-        <div class="ml-5 col-4">
-            <a href="/login" class="btn btn-dark">Авторизоваться</a>
+        <div class="col-lg-3 col-md-3 col-sm-12 item">
+            <a href="/login" class="btn my-btn">Авторизоваться</a>
         </div>
-        <div class="col-4">
-            <a href="/registration" class="btn btn-dark">Зарегистрироваться</a>
+        <div class="col-lg-3 col-md-3 col-sm-12 item">
+            <a href="/registration" class="btn my-btn">Зарегистрироваться</a>
         </div>
     </div>
 </div>
