--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,8 +1,45 @@
 <div th:fragment="footer" xmlns:th="http://www.w3.org/1999/xhtml">
-    <footer class="blog-footer container mt-5">
-        <p>
-            <a href="#">Back to top</a>
-        </p>
+    <footer class="page-footer bg-light font-small pt-4 my-margin-top" itemscope="" itemtype="http://schema.org/WPFooter">
+        <div class="container text-center text-md-left">
+            <div class="row">
+                <div class="col-md-4 mx-auto" itemscope="" itemtype="http://schema.org/Organization">
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Кубанский государственный университет</h5>
+                    <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"> Адрес: <span itemprop="streetAddress">ул. Ставропольская, 149</span> <span itemprop="postalCode">350040</span> <span itemprop="addressLocality">г. Краснодар</span> </div>
+                    Телефон: <span itemprop="telephone">+7 (861) 219-95-30 - приемная комиссия</span><br>
+                    Email: <span itemprop="email">abitur@kubsu.ru</span><br>
+                    Телефон: <span class="text-muted" itemprop="telephone">+7 (861) 219-95-02 - приемная ректора</span><br>
+                    Email: <span class="text-muted" itemprop="email">rector@kubsu.ru</span></div>
+                <hr class="clearfix w-100 d-md-none">
+                <div class="col-md-2 mx-auto">
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Быстрая навигация</h5>
+                    <ul class="list-unstyled">
+                        <li> <a href="tel:+79181328391" class="footer_a">Записаться</a> </li>
+                        <li> <a href="#ourwork" class="footer_a">Наши работы</a> </li>
+                        <li> <a href="#companypeople" class="footer_a">Команда</a> </li>
+                        <li> <a href="#contactinfo" class="footer_a">Контактная информация</a> </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+                <a class="fb-ic my-fa-bars" href="https://www.instagram.com/zhemchuzhina_sk/?igshid=h1ffl9r195m9"> <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="tw-ic my-fa-bars" href="https://www.instagram.com/zhemchuzhina_sk/?igshid=h1ffl9r195m9"> <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="gplus-ic my-fa-bars" href="https://www.instagram.com/zhemchuzhina_sk/?igshid=h1ffl9r195m9"> <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="li-ic my-fa-bars" href="https://www.instagram.com/zhemchuzhina_sk/?igshid=h1ffl9r195m9"> <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> </a>
+            </li>
+            <li class="list-inline-item">
+                <a class="ins-ic my-fa-bars" href="https://www.instagram.com/zhemchuzhina_sk/?igshid=h1ffl9r195m9"> <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i> </a>
+            </li>
+        </ul>
+        <div class="footer-copyright text-center py-3">© 2018 Copyright: <a href="saloonpearl.html" class="footer_a">"Жемчужина" Владимир Токменинов</a> </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
