--- a/src/main/resources/templates/blocks/head.html
+++ b/src/main/resources/templates/blocks/head.html
@@ -1,7 +1,10 @@
-<head th:fragment="head" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:fragment="head" xmlns:th="http://www.thymeleaf.org">
     <title>Spring Kubsu</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/style.css}">
 </head>
