--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,37 +1,47 @@
-<div xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<div xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
     <div th:fragment="header">
-        <div class="container mb-5">
-            <header class="blog-header py-3">
-                <div class="row flex-nowrap justify-content-between align-items-center">
-                    <div class="col-1 pt-1">
-                        <a class="text-muted" href="/about">О нас</a>
-                    </div>
-                    <div class="col-2 pt-1">
-                        <a class="text-muted" href="/main">Расписание</a>
-                    </div>
-                    <div class="col-1 pt-1" sec:authorize="hasAuthority('ADMIN')">
-                        <a class="text-muted" href="/user">Пользователи</a>
-                    </div>
-                    <div class="col-4 text-center">
-                        <a class="blog-header-logo text-dark" href="/">Кубанский государственный университет</a>
-                    </div>
-                    <div class="col-4 d-flex justify-content-end align-items-center">
-                        <a class="text-muted" href="/blog" aria-label="Search">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-                        </a>
-                        <div sec:authorize="!isAuthenticated()">
-                            <a class="btn btn-sm btn-outline-secondary" href="/login">Войти</a>
-                        </div>
-                        <div sec:authorize="isAuthenticated()">
-                            <strong sec:authentication="name" class="mr-2"></strong>
-                            <a class="btn btn-sm btn-outline-secondary" href="/user/profile">Профиль</a>
-                        </div>
-                    </div>
-                    <div sec:authorize="isAuthenticated()">
-                        <div th:insert="blocks/login :: logout"></div>
-                    </div>
+        <nav class="navbar navbar-expand-md navbar-dark sticky-top my-margin-bottom">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/"> <img th:src="@{/static/images/logo.png}" width="136" alt="Описание картинки" />Кубанский государственный университет</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto click-menu-element">
+                        <li class="nav-item">
+                            <a class="font_size_1 nav-link" data-value="major" href="/" >Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="font_size_1 nav-link " data-value="timetable" href="/main" >Расписание</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="font_size_1 nav-link " data-value="about" href="/about" >О приложении</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
+                            <a class="font_size_1 nav-link " data-value="users" href="/user" >Пользователи</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
+                            <a class="font_size_1 nav-link " data-value="add" href="/main/add" >Добавить расписание</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="!isAuthenticated()">
+                            <a class="font_size_1 nav-link btn my-border" data-value="login" href="/login">Авторизация</a>
+                        </li>
+                        <li class="nav-item">
+                            <div sec:authorize="isAuthenticated()">
+                                <strong sec:authentication="name" data-value="name" class="mr-2 navbar-text my-font-color"></strong>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <div sec:authorize="isAuthenticated()">
+                                <a class="font_size_1 nav-link btn my-border" data-value="profile" href="/user/profile">Профиль</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <div sec:authorize="isAuthenticated()" th:insert="blocks/login :: logout"></div>
+                        </li>
+                    </ul>
                 </div>
-            </header>
-        </div>
+            </div>
+        </nav>
     </div>
 </div>
