--- a/src/main/resources/templates/blocks/login.html
+++ b/src/main/resources/templates/blocks/login.html
@@ -1,30 +1,65 @@
 <div xmlns:th="http://www.thymeleaf.org">
-    <div th:fragment="login(path)">
-        <form th:action="${path}" method="post">
+    <div th:fragment="login(path,user,password2,captchaError)">
+        <form th:action="${path}" th:object="${user}" method="post">
             <div class="form-group" th:if="${path}=='/registration'">
                 <label class="col-sm-2 col-form-label"> Электронная почта:</label>
                 <div class="col-sm-6">
-                    <input class="form-control" type="email" name="email" placeholder="Электронная почта"/>
+                    <input th:class="${#fields.hasErrors('email')} ? 'form-control is-invalid' : 'form-control'" type="text" name="email" th:field="*{email}" th:value="*{email}" placeholder="Электронная почта"/>
+                    <b th:if="${#fields.hasErrors('email')}" th:class="${#fields.hasErrors('email')} ? 'invalid-feedback':''" th:errors="*{email}">Email error</b>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 col-form-label"> Имя пользователя:</label>
                 <div class="col-sm-6">
-                    <input class="form-control" type="text" name="username" placeholder="Логин"/>
+                    <div th:if="${path}=='/registration'">
+                        <input th:class="${#fields.hasErrors('username')} ? 'form-control is-invalid' : 'form-control'" type="text" name="username" th:field="*{username}" th:value="*{username}" placeholder="Логин"/>
+                        <b th:if="${#fields.hasErrors('username')}" th:class="${#fields.hasErrors('username')} ? 'invalid-feedback':''" th:errors="*{username}">Username error</b>
+                    </div>
+                    <div th:if="${path}=='/login'">
+                        <input class="form-control" type="text" name="username" placeholder="Логин"/>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 col-form-label"> Пароль:</label>
                 <div class="col-sm-6">
-                    <input class="form-control" type="password" name="password" placeholder="Пароль"/>
+                    <div th:if="${path}=='/registration'">
+                        <input th:class="${#fields.hasErrors('password')} ? 'form-control is-invalid' : 'form-control'"  type="password" name="password" th:field="*{password}" placeholder="Пароль"/>
+                        <b th:if="${#fields.hasErrors('password')}" th:class="${#fields.hasErrors('password')} ? 'invalid-feedback':''" th:errors="*{password}">Password error</b>
+                    </div>
+                    <div th:if="${path}=='/login'">
+                        <input class="form-control"  type="password" name="password" placeholder="Пароль"/>
+                    </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-sm btn-outline-secondary">Sign In</button>
+            <div th:if="${path}=='/registration'">
+                <div class="form-group">
+                    <label class="col-sm-2 col-form-label">Повторите пароль:</label>
+                    <div class="col-sm-6">
+                        <input th:class="${password2} ? 'form-control is-invalid' : 'form-control'" type="password" name="password2" placeholder="Повторите пароль"/>
+                        <div th:class="${password2} ? 'invalid-feedback':''">
+                            <b th:text="${password2}" />
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-6">
+                        <div th:class="${captchaError}? 'g-recaptcha is-invalid':'g-recaptcha'" data-sitekey="6LfI7OoUAAAAAOgt69KtXwsAPCPfcxEMMFWbaspQ"></div>
+                        <div th:class="${captchaError}? 'invalid-feedback':''" >
+                            <b th:text="${captchaError}"/>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn my-btn">Зарегистрироваться</button>
+            </div>
+            <div th:if="${path}=='/login'">
+                <button type="submit" class="btn my-btn mb-1">Авторизоваться</button>
+            </div>
         </form>
     </div>
     <div th:fragment="logout">
         <form th:action="@{/logout}" method="post">
-            <input class="btn btn-sm btn-outline-secondary mr-1" type="submit" value="Выйти"/>
+            <button class="font_size_1 nav-link btn my-border btn-block" type="submit" data-value="logout">Выйти</button>
         </form>
     </div>
 </div>
