--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,10 +8,10 @@
     <h1 class="mb-5">Доступ запрещён</h1>
     <div class="row flex-nowrap justify-content-between align-items-center mt-5">
         <div class="ml-5 col-4">
-            <a href="/" class="">Страница при входе</a>
+            <a href="/" class="btn my-btn">Страница при входе</a>
         </div>
         <div class="col-4">
-            <a href="/main" class="">Расписание</a>
+            <a href="/main" class="btn my-btn">Расписание</a>
         </div>
     </div>
 </div>
