--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,10 +7,13 @@
 <div class="container">
     <h2>Авторизация</h2>
     <div th:class="'alert alert-'+${messageType}">
-        <b th:text="${message}"/>
+        <b th:text="${message}"></b>
     </div>
-    <div th:insert="blocks/login :: login(path=@{/login})" ></div>
-    <a href="/registration">Add new user</a>
+    <div th:if="${param.error}" class="alert alert-danger">
+        <b>Неправильный логин или пароль!</b>
+    </div>
+    <div th:insert="blocks/login :: login(path=@{/login},user=null,password2=null,captchaError=null)" ></div>
+    <a class="btn my-btn" href="/registration">Зарегистрироваться</a>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
