--- a/src/main/resources/templates/main-edit.html
+++ b/src/main/resources/templates/main-edit.html
@@ -41,7 +41,7 @@
                 <input type="text" th:value="${el.couple7}" name="couple7" placeholder="Введите 7 пару , которая в 18:20" class="form-control"><br>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-success">Обновить расписание</button>
+                <button type="submit" class="btn my-btn">Обновить расписание</button>
             </div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         </form>
