--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,13 +1,18 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="blocks/head :: head">
 </head>
 <body>
     <header th:insert="blocks/header :: header"></header>
     <div class="container">
         <h2>Регистрация</h2>
-        <b th:text="${usernameError}"></b>
-        <div th:insert="blocks/login :: login(path=@{/registration})" ></div>
+        <div class="alert alert-danger" th:if="${not #lists.isEmpty(passwordError)}">
+            <b th:text="${passwordError}"></b>
+        </div>
+        <div class="alert alert-danger" th:if="${not #lists.isEmpty(usernameError)}">
+            <b th:text="${usernameError}"></b>
+        </div>
+        <div th:insert="blocks/login :: login(path=@{/registration},user=${user},password2=${password2Error},captchaError=${captchaError})" ></div>
     </div>
     <div th:insert="blocks/footer :: footer"></div>
 </body>
