--- a/src/main/resources/templates/user-edit.html
+++ b/src/main/resources/templates/user-edit.html
@@ -5,7 +5,7 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
-    <h2>Редактор пользователя</h2>
+    <h2>Редактор пользователей</h2>
     <form th:action="@{/user}" method="post">
         <input type="text" name="username" th:value="${user.username}">
         <div th:each="role : ${roles}">
@@ -14,7 +14,7 @@
             </div>
         </div>
         <input type="hidden" th:value="${user.id}" name="userId"/>
-        <button type="submit" class="btn btn-sm btn-outline-secondary">Save</button>
+        <button type="submit" class="btn my-btn">Сохранить</button>
     </form>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
