--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -5,22 +5,47 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
-    <h2 th:text="'Профиль пользователя: '+${username}"></h2>
-    <form method="post">
-        <div class="form-group">
-            <label class="col-sm-2 col-form-label"> Пароль:</label>
-            <div class="col-sm-6">
-                <input class="form-control" type="password" name="password" placeholder="Пароль"/>
-            </div>
-        </div>
+    <h2 th:text="'Изменение профиля пользователя: '+${usernamePresent}"></h2>
+    <div class="alert alert-danger" th:if="${not #lists.isEmpty(passwordError)}">
+        <b th:text="${passwordError}"></b>
+    </div>
+    <div class="alert alert-danger" th:if="${not #lists.isEmpty(usernameError)}">
+        <b th:text="${usernameError}"></b>
+    </div>
+    <h5 th:text="'Текущая электронная почта: '+${emailPresent}"></h5>
+    <form method="post" th:object="${user}">
         <div class="form-group">
             <label class="col-sm-2 col-form-label"> Электронная почта:</label>
             <div class="col-sm-6">
-                <input class="form-control" type="email" name="email" placeholder="Электронная почта" th:value="${email}"/>
+                <input th:class="${#fields.hasErrors('email')} ? 'form-control is-invalid' : 'form-control'" type="text" name="email" th:field="*{email}" th:value="*{email}" placeholder="Электронная почта"/>
+                <b th:if="${#fields.hasErrors('email')}" th:class="${#fields.hasErrors('email')} ? 'invalid-feedback':''" th:errors="*{email}">Email error</b>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label"> Имя пользователя:</label>
+            <div class="col-sm-6">
+                <input th:class="${#fields.hasErrors('username')} ? 'form-control is-invalid' : 'form-control'" type="text" name="username" th:field="*{username}" th:value="*{username}" placeholder="Логин"/>
+                <b th:if="${#fields.hasErrors('username')}" th:class="${#fields.hasErrors('username')} ? 'invalid-feedback':''" th:errors="*{username}">Username error</b>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label"> Пароль:</label>
+            <div class="col-sm-6">
+                <input th:class="${#fields.hasErrors('password')} ? 'form-control is-invalid' : 'form-control'"  type="password" name="password" th:field="*{password}" placeholder="Пароль"/>
+                <b th:if="${#fields.hasErrors('password')}" th:class="${#fields.hasErrors('password')} ? 'invalid-feedback':''" th:errors="*{password}">Password error</b>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label">Повторите пароль:</label>
+            <div class="col-sm-6">
+                <input th:class="${password2Error} ? 'form-control is-invalid' : 'form-control'" type="password" name="password2" placeholder="Повторите пароль"/>
+                <div th:class="${password2Error} ? 'invalid-feedback':''">
+                    <b th:text="${password2Error}" />
+                </div>
             </div>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-        <button type="submit" class="btn btn-sm btn-outline-secondary">Save</button>
+        <button type="submit" class="btn my-btn">Save</button>
     </form>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
