--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-        <button type="submit" class="btn my-btn">Save</button>
+        <button type="submit" class="btn my-btn">Сохранить</button>
     </form>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
