--- a/src/main/resources/templates/blocks/login.html
+++ b/src/main/resources/templates/blocks/login.html
@@ -50,6 +50,7 @@
                         </div>
                     </div>
                 </div>
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                 <button type="submit" class="btn my-btn">Зарегистрироваться</button>
             </div>
             <div th:if="${path}=='/login'">
