--- a/src/main/resources/templates/user-edit.html
+++ b/src/main/resources/templates/user-edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head th:insert="blocks/head :: head">
 </head>
 <body>
@@ -14,6 +14,7 @@
             </div>
         </div>
         <input type="hidden" th:value="${user.id}" name="userId"/>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button type="submit" class="btn my-btn">Сохранить</button>
     </form>
 </div>
