--- a/src/main/resources/templates/upload-files.html
+++ b/src/main/resources/templates/upload-files.html
@@ -6,7 +6,7 @@
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
     <h2>Загрузка расписания из файла </h2>
-    <form th:action="@{/main/download}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/main/upload}" method="post" enctype="multipart/form-data">
         <input type="file" name="file"/>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button type="submit" class="btn my-btn">Загрузить</button>
