--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -5,12 +5,14 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
-    <h2>Список пользователей</h2>
+    <h2 class="my-margin-bottom-2">Список пользователей</h2>
     <table class="table table-sm table-hover col-lg-8 col-md-8 col-sm-12">
         <thead>
         <tr>
             <th scope="col">Имя</th>
             <th scope="col">Роль</th>
+            <th scope="col">#</th>
+            <th scope="col">#</th>
             <th scope="col">#</th>
         </tr>
         </thead>
