--- a/src/main/resources/templates/begin.html
+++ b/src/main/resources/templates/begin.html
@@ -8,17 +8,8 @@
     <p class="font_size_2">Приветствую тебя пользователь в веб-приложении,
         созданным студентом Кубанского государственного
         университета. Здесь ты можешь найти расписание
-        своей группы и подгруппы(если она есть).
-        Однако, чтобы использовать сервис для начало
-        зарегистрируйся или авторизируйся в системе.</p>
-    <div class="row flex-nowrap justify-content-between align-items-center">
-        <div class="col-lg-3 col-md-3 col-sm-12 item">
-            <a href="/login" class="btn my-btn">Авторизоваться</a>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 item">
-            <a href="/registration" class="btn my-btn">Зарегистрироваться</a>
-        </div>
-    </div>
+        своей группы. Однако, чтобы использовать сервис для начала
+        нужно зарегистрироваться или авторизоваться в системе.</p>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
