--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -2,7 +2,7 @@
     <div th:fragment="header">
         <nav class="navbar navbar-expand-md navbar-dark sticky-top my-margin-bottom">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"> <img th:src="@{/static/images/logo.png}" width="136" alt="Описание картинки" />Кубанский государственный университет</a>
+                <a class="navbar-brand" href="/"> <img th:src="@{/static/images/logo.png}" width="136" alt="Описание картинки" />ФКТиПМ</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,7 +21,7 @@
                             <a class="font_size_1 nav-link " data-value="users" href="/user" >Пользователи</a>
                         </li>
                         <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
-                            <a class="font_size_1 nav-link " data-value="add" href="/main/add" >Добавить расписание</a>
+                            <a class="font_size_1 nav-link " data-value="add" href="/main/upload" >Загрузить расписание</a>
                         </li>
                         <li class="nav-item" sec:authorize="!isAuthenticated()">
                             <a class="font_size_1 nav-link btn my-border" data-value="login" href="/login">Авторизация</a>
