--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,83 +6,101 @@
     <header th:insert="blocks/header :: header"></header>
     <div class="container">
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-12 col-lg-10">
                 <form method="get" th:action="@{/main}" class="form-inline">
-                    <input class="form-control" type="text" th:value="${team}" name="team" placeholder="Группа">
-                    <input class="form-control" type="text" th:value="${subgroup}" name="subgroup" placeholder="Подгруппа">
-                    <button type="submit" class="btn btn-dark">Поиск</button>
+                    <label>
+                        <select name="team" id="team" class="form-control">
+                            <option selected disabled>Выберите группу</option>
+                            <label th:each="el : ${teams}">
+                                <option th:value="${el}" th:text="${el}"></option>
+                            </label>
+                        </select>
+                    </label>
+                    <label>
+                        <select name="teacher" id="teacher" class="form-control">
+                            <option selected disabled>Выберите преподавателя</option>
+                            <label th:each="el : ${teachers}">
+                                <option th:value="${el}" th:text="${el}"></option>
+                            </label>
+                        </select>
+                    </label>
+                    <label>
+                        <select name="dayOfWeek" id="dayOfWeek" class="form-control">
+                            <option selected disabled>Выберите день недели</option>
+                            <label>
+                                <option value="Понедельник">Понедельник</option>
+                                <option value="Вторник">Вторник</option>
+                                <option value="Среда">Среда</option>
+                                <option value="Четверг">Четверг</option>
+                                <option value="Пятница">Пятница</option>
+                                <option value="Суббота">Суббота</option>
+                            </label>
+                        </select>
+                    </label>
+                    <button type="submit" class="btn btn-dark form-control">Поиск</button>
                 </form>
             </div>
         </div>
     </div>
-    <div class="container" th:each="el : ${page}">
-        <table class="table table-sm table-hover col-lg-10 col-md-10 col-sm-12">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col"><i th:text="${el.dayOfWeek}"/></th>
-                <th scope="col"> <i th:text="${el.team}"/>/<i th:text="${el.subgroup}"/> </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td><b th:text="${el.couple1}"/></td>
-                <td>8:00-9:30</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td><b th:text="${el.couple2}"/></td>
-                <td>9:40-11:10</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td><b th:text="${el.couple3}"/></td>
-                <td>11:30-13:00</td>
-            </tr>
-            <tr>
-                <th scope="row">4</th>
-                <td><b th:text="${el.couple4}"/></td>
-                <td>13:10-14:40</td>
-            </tr>
-            <tr>
-                <th scope="row">5</th>
-                <td><b th:text="${el.couple5}"/></td>
-                <td>15:00-16:30</td>
-            </tr>
-            <tr>
-                <th scope="row">6</th>
-                <td><b th:text="${el.couple6}"/></td>
-                <td>16:40-18:10</td>
-            </tr>
-            <tr>
-                <th scope="row">7</th>
-                <td><b th:text="${el.couple7}"/></td>
-                <td>18:20-19:50</td>
-            </tr>
-            <tr>
-                <th scope="row">#</th>
-                <td><b>Какая неделя?</b></td>
-                <td><b th:text="${el.parity}"/></td>
-            </tr>
-            <tr>
-                <th scope="row">#</th>
-                <td><b>Автор расписания</b></td>
-                <td><b th:text="${el.author.username}"/></td>
-            </tr>
-            <tr sec:authorize="hasAuthority('ADMIN')">
-                <th scope="row">#</th>
-                <td>
-                    <a th:href="'/main/'+${el.id}+'/edit'" class="btn my-btn">Редактировать</a>
-                </td>
-                <td>
-                    <form th:action="'/main/'+ ${el.id} + '/remove'" method="post">
-                        <button class="btn my-btn">Удалить</button>
-                    </form>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="container">
+        <div th:insert="blocks/pagination :: pagination"></div>
+    </div>
+    <div class="container" th:each="el : ${page.getContent()}">
+        <div class="table-responsive-md">
+            <table class="table table-hover table-striped table-bordered col-lg-10 col-md-10 col-sm-12">
+                <caption>Расписание на <span th:text="${el.getDayOfWeek()}"></span> для группы <span th:text="${el.getTeam()}"></span></caption>
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Время</th>
+                    <th scope="col">Наименование</th>
+                    <th scope="col">Преподаватель</th>
+                    <th scope="col">Тип пары</th>
+                    <th scope="col">Аудитория</th>
+                </tr>
+                </thead>
+                <tbody>
+                <div th:each="couple : ${el.couples}">
+                    <tr>
+                        <th scope="row">#</th>
+                        <td><span th:text="${couple.getTimeCouple().getHours()}"></span>
+                            <span>:</span>
+                            <span th:if="${couple.getTimeCouple().getMinutes()}==0">00</span>
+                            <span th:unless="${couple.getTimeCouple().getMinutes()}==0" th:text="${couple.getTimeCouple().getMinutes()}"></span>
+                        </td>
+                        <td><span th:text="${couple.getTitle()}"></span></td>
+                        <td><span th:text="${couple.getTeacher()}"></span></td>
+                        <td><span th:text="${couple.getType()}"></span></td>
+                        <td><span th:text="${couple.getAudience()}"></span></td>
+                    </tr>
+                </div>
+                <tr>
+                    <th scope="row">#</th>
+                    <td><b>День недели</b></td>
+                    <td><b>Группа</b></td>
+                    <td><b>Какая неделя?</b></td>
+                    <td><b>Автор расписания</b></td>
+                    <td><b>#</b></td>
+                </tr>
+                <tr>
+                    <th scope="row">#</th>
+                    <td><span th:text="${el.dayOfWeek}"></span></td>
+                    <td><span th:text="${el.team}"></span></td>
+                    <td><span th:text="${el.parity}"></span></td>
+                    <td><span th:text="${el.author.username}"></span></td>
+                    <td><b>#</b></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div sec:authorize="hasAuthority('ADMIN')" class="form-group col-md-6">
+            <form th:action="'/main/'+ ${el.id} + '/remove'" method="post">
+                <button class="btn btn-danger">Удалить</button>
+            </form>
+        </div>
+    </div>
+    <div class="container">
+        <div th:insert="blocks/pagination :: pagination"></div>
     </div>
     <div th:insert="blocks/footer :: footer"></div>
 </body>
