--- a/src/main/resources/templates/upload-files.html
+++ b/src/main/resources/templates/upload-files.html
@@ -5,11 +5,17 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container">
-    <h2>Загрузка расписания из файла </h2>
+    <h2 class="my-margin-bottom-2">Загрузка расписания из файла </h2>
     <form th:action="@{/main/upload}" method="post" enctype="multipart/form-data">
-        <input type="file" name="file"/>
+        <div class="form-group">
+            <div class="col-sm-6 mb-3">
+                <input type="file" name="file"/>
+            </div>
+            <div class="col-sm-6">
+                <button class="btn my-btn my-btn-size" type="submit">Загрузить</button>
+            </div>
+        </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-        <button type="submit" class="btn my-btn">Загрузить</button>
     </form>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
